--- a/.env
+++ b/.env
@@ -1,5 +1,2 @@
-DB_NAME=baianomusic
-DB_USER=postgres
-DB_PASSWORD=Arlley1$
-DB_HOST=localhost
-DB_PORT=5432
+NODE_ENV=production
+DATABASE_URL=postgresql://postgres:GXpbQLSfQexeUFzOGFPNPjVAdbvBTvGS@shortline.proxy.rlwy.net:25540/railway
